--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Yape Sprint 6</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="materialize/dist/css/materialize.min.css"  media="screen,projection"/>
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css"> -->	
-	<link rel="stylesheet" type="text/css" href="public/assets/css/main.css">
-</head>
-<body>
-<section class="contain">
-	<div class="carousel carousel-slider center carousel-height" data-indicators="true">
-		<div class="carousel-fixed-item center">
-		  <a class="btn waves-effect btn-yellow white-text">button</a>
+	<head>
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	  <title>Yape Sprint 6</title>
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	  <link type="text/css" rel="stylesheet" href="materialize/dist/css/materialize.min.css"  media="screen,projection"/>	
+	  <link rel="stylesheet" type="text/css" href="public/assets/css/main.css">
+	</head>
+	<body>
+	  <section class="contain">
+		<div class="carousel carousel-slider center carousel-height" data-indicators="true">		
+			<div class="carousel-item" href="#one!">
+			  <div class="img-height">
+		  	  	<img class="responsive-img img-width col s6 offset-s6" src="public/img/icons/icon-people.png">
+		  	  </div>
+			  <h2>Paga a tus amigos</h2>
+			  <p class="padd__sides-10 gray-text">Paga a quienes quieras desde donde quieras, sin usar efectivo.</p>
+			</div>
+			<div class="carousel-item" href="#two!">
+			  <div class="img-height">
+			  	<img class="responsive-img img-width col s6 offset-s3" src="public/img/icons/happy-person.png">
+			  </div>
+			  <h2>Sin número de cuenta</h2>
+			  <p class="padd__sides-10 gray-text">Elige a quien pagar desde tu lista de contactos.</p>
+			</div>
+			<div class="carousel-item" href="#three!">
+			  <div class="img-height">
+			  	<img class="responsive-img img-width col s6 offset-s3" src="public/img/icons/group-people.png">
+			  </div>
+			  <h2>Gratis y Seguro</h2>
+			  <p class="padd__sides-10 gray-text">La transferencia es inmediata y gratuita de una cuenta a otra</p>
+			</div>
+			<div class="carousel-fixed-item center">
+			  <a id="btn-init" class="btn waves-effect btn-yellow white-text">REGISTRARME</a>
+			</div>
 		</div>
-		<div class="carousel-item" href="#one!">
-		  <div class="img-height">
-	  	  	<img class="responsive-img img-width col s6 offset-s6" src="public/img/icons/icon-people.png">
-	  	  </div>
-		  <h2>Paga a tus amigos</h2>
-		  <p class="padd__sides-10">Paga a quienes quieras desde donde quieras, sin usar efectivo.</p>
-		</div>
-		<div class="carousel-item" href="#two!">
-		  <div class="img-height">
-		  	<img class="responsive-img img-width col s6 offset-s3" src="public/img/icons/happy-person.png">
-		  </div>
-		  <h2>Sin número de cuenta</h2>
-		  <p class="padd__sides-10">Elige a quien pagar desde tu lista de contactos.</p>
-		</div>
-		<div class="carousel-item" href="#three!">
-		  <div class="img-height">
-		  	<img class="responsive-img img-width col s6 offset-s3" src="public/img/icons/group-people.png">
-		  </div>
-		  <h2>Gratis y Seguro</h2>
-		  <p class="padd__sides-10">La transferencia es inmediata y gratuita de una cuenta a otra</p>
-		</div>
-	</div>
-	</section>
-	
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
- 	<script src="materialize/dist/js/materialize.min.js"></script>
- 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script> -->
- 	<script type="text/javascript" src="public/assets/js/all.js"></script>
-</body>
+	  </section>
+		
+	  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	  <script src="materialize/dist/js/materialize.min.js"></script>
+	  <script type="text/javascript" src="public/assets/js/index.js"></script>
+	</body>
 </html>
