phone and terms validation

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 			  <p class="padd__sides-10 gray-text">La transferencia es inmediata y gratuita de una cuenta a otra</p>
 			</div>
 			<div class="carousel-fixed-item center">
-			  <a id="btn-init" class="btn waves-effect btn-yellow white-text">REGISTRARME</a>
+			  <a id="btn-init" class="btn waves-effect btn-yellow width-80">REGISTRARME</a>
 			</div>
 		</div>
 	  </section>
